microservice/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice
  namespace: oms
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: oms.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oms
                port:
                  number: 8012
